# writedisk

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
test_data/sys/block/: nvme0n1  sda
test_data/sys/devices/pci0000:00/0000:00:02.4/0000:02:00.0/nvme/nvme0/nvme0n1/: device
test_data/sys/devices/pci0000:00/0000:00:08.3/0000:c3:00.4/usb8/8-1/: manufacturer  product  serial
xtask/: Cargo.toml
xtask/src/: main.rs  vmtest.rs
