[package]
name = "writedisk"
version = "1.3.0"
authors = ["Nicholas Bishop <nbishop@neverware.com>"]
edition = "2021"
repository = "https://github.com/nicholasbishop/writedisk"
license = "Apache-2.0"
description = "Utility for writing a disk image to a USB drive"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["disk", "usb", "image", "burn"]
default-run = "writedisk"

[dependencies]
clap = { version = "4.0.28", features = ["derive"] }
procfs = { version = "0.14.1", default-features = false }
progress = { version = "0.2.0", default-features = false }

[workspace]
members = ["xtask"]
