[package]
name = "writedisk"
version = "1.4.0"
authors = ["Nicholas Bishop <nbishop@neverware.com>"]
edition = "2024"
repository = "https://github.com/nicholasbishop/writedisk"
license = "Apache-2.0"
description = "Utility for writing a disk image to a USB drive"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["disk", "usb", "image", "burn"]
default-run = "writedisk"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
procfs = { version = "0.17.0", default-features = false }
progress = { version = "0.2.0", default-features = false }
nix = { version = "0.30.1", features = ["mount"] }

[workspace]
members = ["xtask"]
